src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Allocated_Region_Mkt_Share__c</fullName>
        <label>Allocated Region</label>
        <picklist>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE, Yorkshire And The Humber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isle Of Man</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Islands</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Allocated_Region__c</fullName>
        <label>Allocated Region</label>
        <picklist>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Area 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Area 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE, Yorkshire And The Humber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Booking_Count__c</fullName>
        <inlineHelpText>The current number of records assigned to a user.</inlineHelpText>
        <label>Current Record Assignment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSL_Username__c</fullName>
        <externalId>true</externalId>
        <label>MSL Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Leave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Leave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quota_Current_Diff__c</fullName>
        <formula>RTF_Booking_Quota__c - Current_Booking_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The difference between the quota and current count of records assigned to a user.</inlineHelpText>
        <label>Difference in Quota and Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTF_Booking_Quota__c</fullName>
        <description>Run till Fill quota for the amount of records each user should be assigned to at a given time.</description>
        <inlineHelpText>Run till Fill quota for the amount of records each user should be assigned to at a given time.</inlineHelpText>
        <label>Record Assignment Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__APILicenseKey__c</fullName>
        <label>API License Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SupportDataAccessKey__c</fullName>
        <label>Support Data Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>RTF_Booking_Quota__c</columns>
        <columns>Current_Booking_Count__c</columns>
        <columns>Quota_Current_Diff__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>